# Autonomous_Perception

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  bdd100k.yaml  carla_actor_factory.py  carla_controller.py  convert_bdd.py  create_placeholder.py  export_model.py  requirements.txt  run_simulation.py  train.py
include/perception/: IInferenceEngine.h  OnnxRuntimeEngine.h
models/: best.onnx
scripts/: class_balance.py  convert_bdd.py  dataset_class_balance_check.py  debug_and_balance.py  export_model.py  find_trains.py  forensic_report.py  validation_dataset_balance.py
src/: OnnxRuntimeEngine.cpp  main.cpp
